--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     	<link rel="stylesheet" type="text/css" href="static/css/main.css" th:href="@{/css/main.css}">
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     	<script type="text/javascript" th:src="@{/js/application.js}"></script>
@@ -21,7 +25,17 @@
 	    					IP Number:<br><br>
 	    				</div>
 	    				<div class="col-sm-8">
-	    					<input type="text" ng-model="ipNumber"> <a ng-href='#' class="btn btn-primary" ng-click='traceInternetProtocolNumber()'>Trace</a><br><br>
+	    					<div class="row">
+	    						<div class="col-sm-5">
+	    							<input type="text" ng-model="ipNumber"> <a ng-href='#' class="btn btn-primary" ng-click='traceInternetProtocolNumber()'>Trace</a>
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<div ng-show="traceLoading" class="spinner-border text-light"></div>
+	    						</div>
+	    						<div class="col-sm-2">
+	    						</div>
+	    					</div>
+	    					 
 	    				</div>
 	    				<div class="col-sm-2">
 	    				</div>
@@ -55,7 +69,17 @@
 	    					Furthest request:<br>
 	    				</div>
 	    				<div class="col-sm-8">
-	    					{{furthest}} <a ng-href='#' class="btn btn-primary" ng-click='getFurthestRequest()'>Get</a><br>
+	    					<div class="row">
+	    						<div class="col-sm-6">
+	    							{{furthest}}
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<a ng-href='#' class="btn btn-primary" ng-click='getFurthestRequest()'>Get</a>
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<div ng-show="furthestLoading" class="spinner-border text-light"></div>
+	    						</div>
+	    					</div>
 	    				</div>
 	    				<div class="col-sm-2">
 	    				</div>
@@ -65,7 +89,17 @@
 	    					Nearest request:<br>
 	    				</div>
 	    				<div class="col-sm-8">
-	    					{{nearest}} <a ng-href='#' class="btn btn-primary" ng-click='getNearestRequest()'>Get</a><br>
+	    					<div class="row">
+	    						<div class="col-sm-6">
+	    							{{nearest}}
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<a ng-href='#' class="btn btn-primary" ng-click='getNearestRequest()'>Get</a>
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<div ng-show="nearestLoading" class="spinner-border text-light"></div>
+	    						</div>
+	    					</div>
 	    				</div>
 	    				<div class="col-sm-2">
 	    				</div>
@@ -75,7 +109,17 @@
 	    					Average requests:<br>
 	    				</div>
 	    				<div class="col-sm-8">
-	    					{{average}} <a ng-href='#' class="btn btn-primary" ng-click='getAverageRequests()'>Get</a><br>
+	    					<div class="row">
+	    						<div class="col-sm-6">
+	    							{{average}}
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<a ng-href='#' class="btn btn-primary" ng-click='getAverageRequests()'>Get</a>
+	    						</div>
+	    						<div class="col-sm-1">
+	    							<div ng-show="averageLoading" class="spinner-border text-light"></div>
+	    						</div>
+	    					</div>
 	    				</div>
 	    				<div class="col-sm-2">
 	    				</div>
