"Kms" added to distances

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -71,7 +71,7 @@
 	    				<div class="col-sm-8">
 	    					<div class="row">
 	    						<div class="col-sm-6">
-	    							{{furthest}}
+	    							{{furthest}} Kms
 	    						</div>
 	    						<div class="col-sm-1">
 	    							<a ng-href='#' class="btn btn-primary" ng-click='getFurthestRequest()'>Get</a>
@@ -91,7 +91,7 @@
 	    				<div class="col-sm-8">
 	    					<div class="row">
 	    						<div class="col-sm-6">
-	    							{{nearest}}
+	    							{{nearest}} Kms
 	    						</div>
 	    						<div class="col-sm-1">
 	    							<a ng-href='#' class="btn btn-primary" ng-click='getNearestRequest()'>Get</a>
@@ -111,7 +111,7 @@
 	    				<div class="col-sm-8">
 	    					<div class="row">
 	    						<div class="col-sm-6">
-	    							{{average}}
+	    							{{average}} Kms
 	    						</div>
 	    						<div class="col-sm-1">
 	    							<a ng-href='#' class="btn btn-primary" ng-click='getAverageRequests()'>Get</a>
